--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,17 +4,14 @@
 <a class="nav-link" href="{{site.baseurl}}/index.html">Home</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
+    <a class="nav-link" href="{{site.baseurl}}/traveling.html">Traveling</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
+    <a class="nav-link" href="{{site.baseurl}}/coding.html">Coding</a>
 </li>
 <li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-wordpress/">WP</a>
+    <a class="nav-link" href="{{site.baseurl}}/books.html">Books</a>
 </li>
 <li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-ghost/">Ghost</a>
-</li>
-<li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/donate/">Buy me a coffee <i class="fa fa-coffee text-danger"></i></a>
+<a class="nav-link" href="{{site.baseurl}}/about-me.html">About Me</a>
 </li>
