--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,6 +10,9 @@
     <a class="nav-link" href="{{site.baseurl}}/coding.html">Coding</a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/cv.html">CV</a>
+</li>
+<li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/books.html">Books</a>
 </li>
 <li class="nav-item">
