--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,16 +21,23 @@
 
     <!-- Theme Stylesheet -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/theme.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/lightgallery.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">  
     <!-- Jquery on header to make sure everything works, the rest  of the scripts in footer for fast loading -->
+    <script src="{{site.baseurl}}/assets/js/common.js"></script>
+    <script src="{{site.baseurl}}/assets/js/lightgallery.min.js"></script>
+
+    <!-- lightgallery plugins -->
+    <script src="{{site.baseurl}}/assets/js/lg-thumbnail.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/lg-fullscreen.min.js"></script>
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
-<script src="../assets/js/common.js"></script>
+
+
     {% include tracking-header.html %}
-
-
+  
 </head>
 
 <body class="{% if page.url == "/" %} homefirstpage {% endif %}">
